envoy/envoy.yaml
listeners:
  - address: "tcp://0.0.0.0:10000"
    filters:
      - name: "http_connection_manager"
        config:
          codec_type: "auto"
          stat_prefix: "ingress_http"
          route_config:
            virtual_hosts: 
              - name: "sumdumgai"
                domains:
                  - "sumdumgai"
                routes:
                  - timeout_ms: 0
                    prefix: "/"
                    host_rewrite: "sumdumgai"
                    cluster: "service_sumdumgai"
              - name: "hilo"
                domains:
                  - "hilo"
                routes: 
                  - timeout_ms: 0
                    prefix: "/"
                    host_rewrite: "hilo"
                    cluster: "service_hilo"
          filters:
            - name: "router"
              config: {}
admin:
  access_log_path: "/tmp/admin_access.log"
  address: "tcp://0.0.0.0:9901"
cluster_manager:
  clusters:
    - name: "service_hilo"
      connect_timeout_ms: 250
      type: "logical_dns"
      lb_type: "round_robin"
      hosts:
        - url: 'tcp://hilo:4567'
    - name: 'service_sumdumgai'
      connect_timeout_ms: 250
      type: 'logical_dns'
      lb_type: 'round_robin'
      hosts:
        - url: 'tcp://sumdumgai:4567
